# NUCLEO-F446RE_FreeRTOS_LD_DRIVER

./: .gitignore  .mxproject  CMakeLists.txt  NUCLEO-F446RE_FreeRTOS_LD_DRIVER.ioc  STM32F446XX_FLASH.ld
.github/instructions/: stm32-cubemx.instructions.md
.github/prompts/: 커밋-푸시.prompt.md  커밋.prompt.md
Core/Inc/: FreeRTOSConfig.h  RTE_Components.h  c_adc.h  c_debug.h  c_font.h  c_lcd_ili9341.h  cmsis_os.h  main.h  stm32f4xx_it.h  tx_user.h
Core/Src/: app_threadx.c  c_adc.c  c_debug.c  c_font.c  c_lcd_ili9341.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
Docs/: c_debug_porting_guide.md  c_lcd_ili9341_porting_guide.md  stm32h7-threadx-migration.md  task_architecture.md  tracex-usage-guide.md
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
tools/: build_exe.bat  tracex_recv.py
